--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
+/.vs/reidarsStorybook/config/applicationhost.config
+/.vs/reidarsStorybook/v16/.suo
+/.vs/slnx.sqlite
