--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ dist
 /.vs/reidarsStorybook/config/applicationhost.config
 /.vs/reidarsStorybook/v16/.suo
 /.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
