Edit build-storybook script: Output to /docs

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook -c .storybook -o .out",
+        "build-storybook": "rimraf docs && build-storybook -c .storybook -o docs",
         "dev": "webpack --config webpack.config.dev.js",
         "build": "rimraf bundle && webpack --config webpack.config.prod.js",
         "clean": "rimraf bundle"
