--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "react-dom": "^18.2.0",
     "sass": "^1.66.1",
     "storybook": "^7.4.0"
+  },
+  "dependencies": {
+    "@whitespace/storybook-addon-html": "^5.1.6"
   }
 }
